kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-mailing
  labels:
    app: ms-mailing
spec:
  type: ClusterIP
  ports:
    - name: "web"
      port: 3000
      targetPort: 3000
  selector:
    app: ms-mailing
